@@ -1,3 +1,10 @@
+2005-10-24  Alexis Sukrieh  <sukria@sukria.net>
+
+	* backup-manager.conf.tpl:
+	  + better comments for the pipe array.
+	* lib/backup-methods.sh:
+	  + "mysql" method now uses the pipe mechanism.
+
 2005-10-23  Alexis Sukrieh  <sukria@sukria.net>
 
 	* backup-manager.conf.tpl: 
